--- a/4fourthapp/templates/download.html
+++ b/4fourthapp/templates/download.html
@@ -2,28 +2,6 @@
 {% block title %}Index Page{% endblock %}
 
 {% block content %}
-    <h1>Hello World</h1>
-    <form method="POST" action="{{ url_for('index') }}">
-        <input type="text" name="username" placeholder="Username"><br>
-        <input type="password" name="password" placeholder="Password"><br>
-        <input type="submit" value="Login">
-    </form>
-
-    <h1>File Upload</h1>
-    <form method="POST" action="{{ url_for('file_upload')}}" enctype="multipart/form-data">
-        <input type="file" name="file" required="required" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel, text/plain">
-        <input type="submit" value="Upload File">
-    </form>
-
-    <h1>Convert CSV</h1>
-    <form method="POST" action="{{ url_for('convert_csv')}}" enctype="multipart/form-data">
-        <input type="file" name="file" required="required" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
-        <input type="submit" value="Upload File">
-    </form>
-
-    <h1>Convert CSV 2</h1>
-    <form method="POST" action="{{ url_for('convert_csv_two')}}" enctype="multipart/form-data">
-        <input type="file" name="file" required="required" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
-        <input type="submit" value="Upload File">
-    </form>
+    <h1>Download</h1>
+    <a href="{{ url_for('download', filename=filename) }}">Download</a>
 {% endblock %}
