--- a/6sixthapp/templates/index.html
+++ b/6sixthapp/templates/index.html
@@ -3,7 +3,13 @@
 
 {% block content %}
     <h1>Lesson 6</h1>
-    <p>{{ message }}</p>
 
-    <a href="{{ url_for('set_data') }}">Set Session Data</a>
+    <p>{{ message }}</p>
+    <a href="{{ url_for('set_data') }}">Set Session Data</a><br>
+    <a href="{{ url_for('get_data') }}">Get Session Data</a><br>
+    <a href="{{ url_for('clear_session') }}">Clear Session Data</a><br>
+    <a href="{{ url_for('set_cookie') }}">Set Cookie</a><br>
+    <a href="{{ url_for('get_cookie') }}">Get Cookie</a><br>
+    <a href="{{ url_for('remove_cookie') }}">Clear Cookie</a><br>
+    <a href="{{ url_for('login') }}">Login</a><br>
 {% endblock %}
